--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,29 @@
 {
+  "version": "0.2.0",
   "configurations": [
     {
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/cub3D",
-      "args": [
-        "${workspaceFolder}/maps/small_map.cub"
-      ],
-      "stopAtEntry": true,
+      "args": ["maps/small_map.cub"],
+      "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
       "setupCommands": [
         {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        },
+        {
           "description": "Set Disassembly Flavor to Intel",
           "text": "-gdb-set disassembly-flavor intel",
           "ignoreFailures": true
         }
       ]
-    }
+    },
+  ]
 }
